# Inventory

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  PROJECT_FILES_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.docker-tmp/: .token_seed
.docker-tmp/buildx/: .buildNodeID
.docker-tmp/buildx/activity/: default
.docker-tmp/buildx/refs/default/default/: yzl4eu7dekjcwcvy3a6lkffxt
alembic/: env.py
alembic/versions/: 20260323_000001_initial_schema.py
app/: __init__.py  main.py
app/api/v1/: auth.py  health.py  inventory.py  items.py  router.py  users.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  security.py
app/db/: init_db.py  session.py
app/models/: __init__.py  inventory_item.py  stock_movement.py  user.py
app/repositories/: item_repository.py  movement_repository.py  user_repository.py
app/schemas/: common.py  item.py  movement.py  user.py
app/services/: auth_service.py  inventory_service.py  item_service.py  user_service.py
app/tasks/: celery_app.py  inventory_tasks.py
tests/: conftest.py  test_auth_service.py  test_inventory_service.py  test_item_service.py  test_user_service.py
